Fixed image background on iPad, adjusted padding on mobile close button.

--- a/client/stylesheets/all.less
+++ b/client/stylesheets/all.less
@@ -72,7 +72,12 @@ html, body {
     width: 100%;
     height: 100%;
 
-    background: url("@{root}loginBg.png") no-repeat center center fixed;
+    background: url("@{root}loginBg.jpg") no-repeat center center fixed;
+
+    -webkit-background-size: 100%;
+    -moz-background-size: 100%;
+    -o-background-size: 100%;
+    background-size: 100%;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
@@ -251,8 +256,8 @@ html, body {
     position: absolute;
     top: 0;
     font-size: 22px;
-    right: 10px;
-    padding: 6px 25px;
+    right: 0;
+    padding: 6px 18px;
     cursor: pointer;
     .borderBox;
 }
